@@ -4,7 +4,7 @@ use namespace::autoclean;
 
 use Class::Usul::Constants       qw( NUL TRUE );
 use Class::Usul::Functions       qw( app_prefix );
-use Data::Validation;
+use Data::Validation::Constants  qw( );
 use File::DataClass::Types       qw( ArrayRef Bool Directory File HashRef
                                      NonEmptySimpleStr NonNumericSimpleStr
                                      NonZeroPositiveInt Object Path
@@ -81,9 +81,6 @@ has 'cdnjs'           => is => 'lazy', isa => HashRef,
 
 has 'colours'         => is => 'lazy', isa => ArrayRef[HashRef],
    builder            => $_build_colours, init_arg => undef;
-
-has 'common_links'    => is => 'ro',   isa => ArrayRef[NonEmptySimpleStr],
-   builder            => sub { [ qw( assets css help_url images js less ) ] };
 
 has 'components'      => is => 'ro',   isa => HashRef, builder => sub { {
    'Model::User'      => {
@@ -205,6 +202,7 @@ has 'skin'            => is => 'ro',   isa => NonEmptySimpleStr,
 has 'stash_attr'      => is => 'lazy', isa => HashRef[ArrayRef],
    builder            => sub { {
       config          => [ qw( author description keywords template ) ],
+      links           => [ qw( assets css help_url images js less ) ],
       request         => [ qw( authenticated host language mode username ) ],
       session         => [ sort keys %{ $_[ 0 ]->session_attr } ], } };
 
@@ -342,12 +340,6 @@ A lazily evaluated array reference of hashes created automatically from the
 hash reference in the configuration file. Each hash has a single
 key / value pair, the colour name and it's hash value. If specified
 creates a custom colour scheme for the project
-
-=item C<common_links>
-
-An array reference that defaults to C<[ assets css help_url images less js ]>.
-The application pre-calculates URIs for these static directories for use
-in the HTML templates
 
 =item C<components>
 
@@ -624,6 +616,12 @@ copied into the stash. Defines the following keys and values;
 
 The list of configuration attributes whose values are copied to the C<page>
 hash reference in the stash
+
+=item C<common_links>
+
+An array reference that defaults to C<[ assets css help_url images less js ]>.
+The application pre-calculates URIs for these static directories for use
+in the HTML templates
 
 =item C<request>
 
